prac2y.output
Grammar

    0 $accept: start $end

    1 start: calc root

    2 calc: MODE

    3 root: root statement
    4     | statement

    5 statement: ID ASSIGN expression NEWLINE
    6          | expression NEWLINE
    7          | NEWLINE

    8 expression: FUNC PARENTHESIS_OPEN expression PARENTHESIS_CLOSE
    9           | expression COMP expression
   10           | PARENTHESIS_OPEN expression PARENTHESIS_CLOSE
   11           | expression POW expression
   12           | expression MOD expression
   13           | expression MULTIPLY expression
   14           | expression DIVIDE expression
   15           | expression ADD expression
   16           | expression SUBSTRACT expression
   17           | ID
   18           | UTYPE


Terminals, with rules where they appear

$end (0) 0
error (256)
MODE (258) 2
UTYPE (259) 18
ID (260) 5 17
NEWLINE (261) 5 6 7
ASSIGN (262) 5
ADD (263) 15
SUBSTRACT (264) 16
MULTIPLY (265) 13
DIVIDE (266) 14
POW (267) 11
MOD (268) 12
PARENTHESIS_OPEN (269) 8 10
PARENTHESIS_CLOSE (270) 8 10
FUNC (271) 8
COMP (272) 9


Nonterminals, with rules where they appear

$accept (18)
    on left: 0
start (19)
    on left: 1, on right: 0
calc (20)
    on left: 2, on right: 1
root (21)
    on left: 3 4, on right: 1 3
statement (22)
    on left: 5 6 7, on right: 3 4
expression (23)
    on left: 8 9 10 11 12 13 14 15 16 17 18, on right: 5 6 8 9 10 11
    12 13 14 15 16


State 0

    0 $accept: . start $end

    MODE  shift, and go to state 1

    start  go to state 2
    calc   go to state 3


State 1

    2 calc: MODE .

    $default  reduce using rule 2 (calc)


State 2

    0 $accept: start . $end

    $end  shift, and go to state 4


State 3

    1 start: calc . root

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 6
    NEWLINE           shift, and go to state 7
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    root        go to state 10
    statement   go to state 11
    expression  go to state 12


State 4

    0 $accept: start $end .

    $default  accept


State 5

   18 expression: UTYPE .

    $default  reduce using rule 18 (expression)


State 6

    5 statement: ID . ASSIGN expression NEWLINE
   17 expression: ID .

    ASSIGN  shift, and go to state 13

    $default  reduce using rule 17 (expression)


State 7

    7 statement: NEWLINE .

    $default  reduce using rule 7 (statement)


State 8

   10 expression: PARENTHESIS_OPEN . expression PARENTHESIS_CLOSE

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 15


State 9

    8 expression: FUNC . PARENTHESIS_OPEN expression PARENTHESIS_CLOSE

    PARENTHESIS_OPEN  shift, and go to state 16


State 10

    1 start: calc root .
    3 root: root . statement

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 6
    NEWLINE           shift, and go to state 7
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    $default  reduce using rule 1 (start)

    statement   go to state 17
    expression  go to state 12


State 11

    4 root: statement .

    $default  reduce using rule 4 (root)


State 12

    6 statement: expression . NEWLINE
    9 expression: expression . COMP expression
   11           | expression . POW expression
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression

    NEWLINE    shift, and go to state 18
    ADD        shift, and go to state 19
    SUBSTRACT  shift, and go to state 20
    MULTIPLY   shift, and go to state 21
    DIVIDE     shift, and go to state 22
    POW        shift, and go to state 23
    MOD        shift, and go to state 24
    COMP       shift, and go to state 25


State 13

    5 statement: ID ASSIGN . expression NEWLINE

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 26


State 14

   17 expression: ID .

    $default  reduce using rule 17 (expression)


State 15

    9 expression: expression . COMP expression
   10           | PARENTHESIS_OPEN expression . PARENTHESIS_CLOSE
   11           | expression . POW expression
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression

    ADD                shift, and go to state 19
    SUBSTRACT          shift, and go to state 20
    MULTIPLY           shift, and go to state 21
    DIVIDE             shift, and go to state 22
    POW                shift, and go to state 23
    MOD                shift, and go to state 24
    PARENTHESIS_CLOSE  shift, and go to state 27
    COMP               shift, and go to state 25


State 16

    8 expression: FUNC PARENTHESIS_OPEN . expression PARENTHESIS_CLOSE

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 28


State 17

    3 root: root statement .

    $default  reduce using rule 3 (root)


State 18

    6 statement: expression NEWLINE .

    $default  reduce using rule 6 (statement)


State 19

   15 expression: expression ADD . expression

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 29


State 20

   16 expression: expression SUBSTRACT . expression

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 30


State 21

   13 expression: expression MULTIPLY . expression

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 31


State 22

   14 expression: expression DIVIDE . expression

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 32


State 23

   11 expression: expression POW . expression

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 33


State 24

   12 expression: expression MOD . expression

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 34


State 25

    9 expression: expression COMP . expression

    UTYPE             shift, and go to state 5
    ID                shift, and go to state 14
    PARENTHESIS_OPEN  shift, and go to state 8
    FUNC              shift, and go to state 9

    expression  go to state 35


State 26

    5 statement: ID ASSIGN expression . NEWLINE
    9 expression: expression . COMP expression
   11           | expression . POW expression
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression

    NEWLINE    shift, and go to state 36
    ADD        shift, and go to state 19
    SUBSTRACT  shift, and go to state 20
    MULTIPLY   shift, and go to state 21
    DIVIDE     shift, and go to state 22
    POW        shift, and go to state 23
    MOD        shift, and go to state 24
    COMP       shift, and go to state 25


State 27

   10 expression: PARENTHESIS_OPEN expression PARENTHESIS_CLOSE .

    $default  reduce using rule 10 (expression)


State 28

    8 expression: FUNC PARENTHESIS_OPEN expression . PARENTHESIS_CLOSE
    9           | expression . COMP expression
   11           | expression . POW expression
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression

    ADD                shift, and go to state 19
    SUBSTRACT          shift, and go to state 20
    MULTIPLY           shift, and go to state 21
    DIVIDE             shift, and go to state 22
    POW                shift, and go to state 23
    MOD                shift, and go to state 24
    PARENTHESIS_CLOSE  shift, and go to state 37
    COMP               shift, and go to state 25


State 29

    9 expression: expression . COMP expression
   11           | expression . POW expression
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   15           | expression ADD expression .
   16           | expression . SUBSTRACT expression

    MULTIPLY  shift, and go to state 21
    DIVIDE    shift, and go to state 22
    POW       shift, and go to state 23
    MOD       shift, and go to state 24
    COMP      shift, and go to state 25

    $default  reduce using rule 15 (expression)


State 30

    9 expression: expression . COMP expression
   11           | expression . POW expression
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression
   16           | expression SUBSTRACT expression .

    MULTIPLY  shift, and go to state 21
    DIVIDE    shift, and go to state 22
    POW       shift, and go to state 23
    MOD       shift, and go to state 24
    COMP      shift, and go to state 25

    $default  reduce using rule 16 (expression)


State 31

    9 expression: expression . COMP expression
   11           | expression . POW expression
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   13           | expression MULTIPLY expression .
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression

    POW   shift, and go to state 23
    COMP  shift, and go to state 25

    $default  reduce using rule 13 (expression)


State 32

    9 expression: expression . COMP expression
   11           | expression . POW expression
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   14           | expression DIVIDE expression .
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression

    POW   shift, and go to state 23
    COMP  shift, and go to state 25

    $default  reduce using rule 14 (expression)


State 33

    9 expression: expression . COMP expression
   11           | expression . POW expression
   11           | expression POW expression .
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression

    $default  reduce using rule 11 (expression)


State 34

    9 expression: expression . COMP expression
   11           | expression . POW expression
   12           | expression . MOD expression
   12           | expression MOD expression .
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression

    POW   shift, and go to state 23
    COMP  shift, and go to state 25

    $default  reduce using rule 12 (expression)


State 35

    9 expression: expression . COMP expression
    9           | expression COMP expression .
   11           | expression . POW expression
   12           | expression . MOD expression
   13           | expression . MULTIPLY expression
   14           | expression . DIVIDE expression
   15           | expression . ADD expression
   16           | expression . SUBSTRACT expression

    $default  reduce using rule 9 (expression)


State 36

    5 statement: ID ASSIGN expression NEWLINE .

    $default  reduce using rule 5 (statement)


State 37

    8 expression: FUNC PARENTHESIS_OPEN expression PARENTHESIS_CLOSE .

    $default  reduce using rule 8 (expression)
